--- a/geek-h5-react/package.json
+++ b/geek-h5-react/package.json
@@ -57,9 +57,14 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^28.1.2",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "postcss-px-to-viewport": "^1.1.1",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "typescript": "^4.7.4"
   }
 }
