--- a/geek-h5-react/package.json
+++ b/geek-h5-react/package.json
@@ -61,6 +61,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-router-dom": "^5.3.3",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "postcss-px-to-viewport": "^1.1.1",
